must-gather.local.5022534670626055853/registry-redhat-io-openshift-service-mesh-istio-must-gather-rhel8-sha256-4f65e564ad1ba0b86c140668c833c753dae7bd2def50c6e88c4afb7e45148870/namespaces/istio-system/route.openshift.io/routes.yaml
---
apiVersion: route.openshift.io/v1
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"route.openshift.io/v1","kind":"Route","metadata":{"annotations":{"maistra.io/mesh-generation":"2.3.2-1-5"},"labels":{"app":"grafana","app.kubernetes.io/component":"grafana","app.kubernetes.io/instance":"istio-system","app.kubernetes.io/managed-by":"maistra-istio-operator","app.kubernetes.io/name":"grafana","app.kubernetes.io/part-of":"istio","app.kubernetes.io/version":"2.3.2-1-5","maistra-version":"2.3.2","maistra.io/owner":"istio-system","maistra.io/owner-name":"basic"," [...]
      maistra.io/mesh-generation: 2.3.2-1-5
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-03-24T18:24:29Z"
    labels:
      app: grafana
      app.kubernetes.io/component: grafana
      app.kubernetes.io/instance: istio-system
      app.kubernetes.io/managed-by: maistra-istio-operator
      app.kubernetes.io/name: grafana
      app.kubernetes.io/part-of: istio
      app.kubernetes.io/version: 2.3.2-1-5
      maistra-version: 2.3.2
      maistra.io/owner: istio-system
      maistra.io/owner-name: basic
      release: istio
    name: grafana
    namespace: istio-system
    ownerReferences:
    - apiVersion: maistra.io/v2
      blockOwnerDeletion: true
      controller: true
      kind: ServiceMeshControlPlane
      name: basic
      uid: ea62ab37-de81-47cf-a7a3-ecf2986a0b2f
    resourceVersion: "885975"
    uid: c4ca402d-6d4c-4953-a92c-90d2b3401adf
  spec:
    host: grafana-istio-system.apps.demos.sandbox686.opentlc.com
    tls:
      insecureEdgeTerminationPolicy: Redirect
      termination: reencrypt
    to:
      kind: Service
      name: grafana
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-03-24T18:24:29Z"
        status: "True"
        type: Admitted
      host: grafana-istio-system.apps.demos.sandbox686.opentlc.com
      routerCanonicalHostname: router-default.apps.demos.sandbox686.opentlc.com
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-03-24T17:29:17Z"
    labels:
      app: jaeger
      app.kubernetes.io/component: query-route
      app.kubernetes.io/instance: jaeger
      app.kubernetes.io/managed-by: jaeger-operator
      app.kubernetes.io/name: jaeger
      app.kubernetes.io/part-of: jaeger
    name: jaeger
    namespace: istio-system
    ownerReferences:
    - apiVersion: jaegertracing.io/v1
      controller: true
      kind: Jaeger
      name: jaeger
      uid: a54859a0-fa66-4a80-a933-0b3891856e7b
    resourceVersion: "859820"
    uid: 14926de4-0c2c-4ba3-ac8f-172ee1cf8d5d
  spec:
    host: jaeger-istio-system.apps.demos.sandbox686.opentlc.com
    port:
      targetPort: https-query
    tls:
      termination: reencrypt
    to:
      kind: Service
      name: jaeger-query
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-03-24T17:29:17Z"
        status: "True"
        type: Admitted
      host: jaeger-istio-system.apps.demos.sandbox686.opentlc.com
      routerCanonicalHostname: router-default.apps.demos.sandbox686.opentlc.com
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-03-24T17:28:50Z"
    labels:
      app: kiali
      app.kubernetes.io/instance: kiali
      app.kubernetes.io/name: kiali
      app.kubernetes.io/part-of: kiali
      app.kubernetes.io/version: b38ef0fd4444e449f7f6cf84f6aa7558d502c9e848181a936bc338cd0e4aXXX
      version: b38ef0fd4444e449f7f6cf84f6aa7558d502c9e848181a936bc338cd0e4aXXX
    name: kiali
    namespace: istio-system
    ownerReferences:
    - apiVersion: kiali.io/v1alpha1
      kind: Kiali
      name: kiali
      uid: 82801f48-a75a-4d8c-ba65-484585db7382
    resourceVersion: "859178"
    uid: 0d1a96a0-8803-4376-8977-f428d2a95735
  spec:
    host: kiali-istio-system.apps.demos.sandbox686.opentlc.com
    port:
      targetPort: 20001
    tls:
      insecureEdgeTerminationPolicy: Redirect
      termination: reencrypt
    to:
      kind: Service
      name: kiali
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-03-24T17:28:50Z"
        status: "True"
        type: Admitted
      host: kiali-istio-system.apps.demos.sandbox686.opentlc.com
      routerCanonicalHostname: router-default.apps.demos.sandbox686.opentlc.com
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"route.openshift.io/v1","kind":"Route","metadata":{"annotations":{"maistra.io/mesh-generation":"2.3.2-1-5"},"labels":{"app":"prometheus","app.kubernetes.io/component":"prometheus","app.kubernetes.io/instance":"istio-system","app.kubernetes.io/managed-by":"maistra-istio-operator","app.kubernetes.io/name":"prometheus","app.kubernetes.io/part-of":"istio","app.kubernetes.io/version":"2.3.2-1-5","maistra-version":"2.3.2","maistra.io/owner":"istio-system","maistra.io/owner-name": [...]
      maistra.io/mesh-generation: 2.3.2-1-5
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-03-24T18:24:26Z"
    labels:
      app: prometheus
      app.kubernetes.io/component: prometheus
      app.kubernetes.io/instance: istio-system
      app.kubernetes.io/managed-by: maistra-istio-operator
      app.kubernetes.io/name: prometheus
      app.kubernetes.io/part-of: istio
      app.kubernetes.io/version: 2.3.2-1-5
      maistra-version: 2.3.2
      maistra.io/owner: istio-system
      maistra.io/owner-name: basic
      release: istio
    name: prometheus
    namespace: istio-system
    ownerReferences:
    - apiVersion: maistra.io/v2
      blockOwnerDeletion: true
      controller: true
      kind: ServiceMeshControlPlane
      name: basic
      uid: ea62ab37-de81-47cf-a7a3-ecf2986a0b2f
    resourceVersion: "885881"
    uid: 6c0c03d5-62a9-4712-93a6-d03a82a1e745
  spec:
    host: prometheus-istio-system.apps.demos.sandbox686.opentlc.com
    tls:
      insecureEdgeTerminationPolicy: Redirect
      termination: reencrypt
    to:
      kind: Service
      name: prometheus
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-03-24T18:24:26Z"
        status: "True"
        type: Admitted
      host: prometheus-istio-system.apps.demos.sandbox686.opentlc.com
      routerCanonicalHostname: router-default.apps.demos.sandbox686.opentlc.com
      routerName: default
      wildcardPolicy: None
kind: RouteList
metadata:
  resourceVersion: "1903151"
